[gd_scene load_steps=4 format=3 uid="uid://bf3rmgyro74wr"]

[ext_resource type="Script" path="res://node.gd" id="1_poooq"]
[ext_resource type="Script" path="res://twitch_reward_handler.gd" id="2_e1mut"]
[ext_resource type="Script" path="res://player_character_manager.gd" id="3_8x78w"]

[node name="Main" type="Node2D"]

[node name="TwitchIntegrationAPI" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_poooq")

[node name="OauthValHTTPRequest" type="HTTPRequest" parent="TwitchIntegrationAPI"]

[node name="SubscriptionHTTPRequest" type="HTTPRequest" parent="TwitchIntegrationAPI"]

[node name="Timer" type="Timer" parent="TwitchIntegrationAPI"]
wait_time = 3600.0

[node name="TwitchRewardHandler" type="Node" parent="."]
script = ExtResource("2_e1mut")

[node name="PlayerCharacterManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_8x78w")

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerCharacterManager"]
offset_right = 878.0
offset_bottom = 404.0
